<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sketch_file"
        android:showAsAction="always"
        android:title="@string/action_sketch_file"/>
    
    <item
        android:id="@+id/action_sketch_shape"
        android:showAsAction="always"
        android:title="@string/action_sketch_shape"/>

    <item
        android:id="@+id/action_sketch_style"
        android:showAsAction="always"
        android:title="@string/action_sketch_style"/>
    
    <item
        android:id="@+id/action_sketch_color"
        android:showAsAction="always"
        android:title="@string/action_sketch_color"/>
    
    <item
        android:id="@+id/action_sketch_erase"
        android:showAsAction="always"
        android:title="@string/action_sketch_erase"/>

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:showAsAction="always"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

    <!--
      <item
          android:id="@+id/action_sketch_tool"
          android:showAsAction="ifRoom"
          android:title="@string/action_sketch_tool"/>
      <item
          android:id="@+id/action_sketch_view"
          android:showAsAction="ifRoom"
          android:title="@string/action_sketch_view"/>

      <item
          android:id="@+id/action_sketch_ideas"
          android:showAsAction="ifRoom"
          android:title="@string/action_sketch_ideas"/>

      <item
          android:id="@+id/action_sketch_settings"
          android:showAsAction="ifRoom"
          android:title="@string/action_sketch_settings"/>
   -->
    
</menu>