<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000FF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AhaHahActivity" >

    <!-- SPLASH 
        android:layout_width="1280sp"
        android:layout_height="720sp"
    -->
    <ImageView
        android:id="@+id/imageViewSplash"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/splash_description"
        android:scaleType="fitCenter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sharkstooth1280x720" />
    <!-- THUMB -->
    <ImageView
        android:id="@+id/imageViewThumb"
        android:layout_width="128dp"
        android:layout_height="72dp"
        android:layout_alignLeft="@+id/imageViewSplash"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/thumb_description"
        android:src="@drawable/sharkstooth128x72" />

    <TextView style="@style/SplashLayout"
        android:id="@+id/textViewNickname"
        android:text="@string/author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageViewThumb"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFF00"
        android:textStyle="bold|italic" />

    <TextView style="@style/SplashLayout"
        android:id="@+id/textViewAppName"
        android:text="@string/app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewNickname"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFF00"
        android:textStyle="bold" />
    
    <!-- BUTTONS 
        android:id="@+id/buttonCamera"
        android:onClick="startCameraActivity"
        android:text="@string/camera_button_text"
        android:hint="@string/camera_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewAppName"
        android:layout_below="@+id/textViewNickname"
        android:layout_marginTop="110dp"
        android:paddingBottom="10dp"
        android:textSize="32dp"
        android:visibility="visible" 
        android:textColor="#FFFF00"/>

        android:layout_alignRight="@+id/textViewAppName"

    -->
    <Button style="@style/SplashLayout"
        android:id="@+id/buttonCamera"
        android:onClick="startCameraActivity"
        android:text="@string/camera_button_text"
        android:hint="@string/camera_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNickname"
        android:layout_centerHorizontal="true"
        android:visibility="visible" 
        android:textColor="#FFFF00"/>

        <Button style="@style/SplashLayout"
        android:id="@+id/buttonSketch"
        android:onClick="startSketchActivity"
        android:text="@string/sketch_button_text"
        android:hint="@string/sketch_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCamera"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFF00" />

    <Button style="@style/SplashLayout"
        android:id="@+id/buttonGallery"
        android:onClick="startGalleryActivity"
        android:text="@string/gallery_button_text"
        android:hint="@string/gallery_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSketch"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFF00" />
   <!--
    <Button style="@style/SplashLayout"
        android:id="@+id/buttonShare" 
        android:onClick="startShareActivity"
        android:text="@string/share_button_text"
        android:hint="@string/share_hint"
        android:layout_width="wrap_content" 
        android:layout_height="64dp" 
        android:layout_below="@+id/buttonGallery"
        android:layout_centerHorizontal="true" />
    -->
    <!-- BUTTON HINTS 
    <TextView
        android:id="@+id/textViewGalleryHint"
        android:text="@string/gallery_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonGallery"
        android:layout_alignBottom="@+id/buttonGallery"
        android:layout_marginLeft="51sp"
        android:layout_toRightOf="@+id/buttonGallery"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFF00" />

    <TextView
        android:id="@+id/textViewCameraHint"
        android:text="@string/camera_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewGalleryHint"
        android:layout_alignTop="@+id/buttonCamera"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFF00" />

    <TextView
        android:id="@+id/textViewSketchHint"
        android:text="@string/sketch_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCameraHint"
        android:layout_alignTop="@+id/buttonSketch"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFF00" />

    <TextView
        android:id="@+id/textViewShareHint"
        android:text="@string/share_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewSketchHint"
        android:layout_alignTop="@+id/buttonShare"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFF00" />
-->

</RelativeLayout>